# pi-flight

./: .gitignore  1.md  1.txt  PBT_DEPLOYMENT_SUMMARY.md  QUICKSTART_BASELINES.md  README.md  ab_benchmark.py  collect_meta_rl.sh  compare_run.sh  discuss.md  git.md  main.py  main_no_gui.py  pbt_test_quick.sh  pw_diagnostic_report.md  reorganize.sh  requirements.txt  reward.py  run.sh  run_baseline_overview.ps1  scg_vec_env.py  start.txt  test.py  test_env_pool_reuse.py  test_isaac_cuda.py  test_ranking_action_integration.py  train_full.sh  train_full.sh.bak  train_meta_rl.sh  train_pbt.sh  train_quick_test.sh  train_smooth_control.sh
.github/: copilot-instructions.md
01_pi_flight/: IMPORT_FIX_COMPLETE.md  __init__.py  batch_evaluation.py  batch_evaluation.py.gpu_backup  bootstrap_policy_nn.py  bootstrap_trnn.py  dsl.py  eval_piflight.py  gnn_features.py  gnn_policy_nn_v2.py  local_pid.py  ml_param_scheduler.py  policy_nn.py  reward_stepwise.py  segmented_controller.py  serialization.py  test_online_system.py  tr_nn.py  train_online.py  train_pbt.py  train_pi_flight.py  trust_region.py
02_PPO/: README.md  __init__.py  baseline_ppo.py  compare_methods.py  eval_ppo.py  requirements.txt  run_train.sh  scg_vec_env.py  train.sh  train_ppo.py
02_baseline/: eval_baseline.py  tune_lqr_aligned.py  tune_pid_aligned.py
03_CMA-ES/: cma_pid_search.py
03_SAC/: eval_sac.py  train.sh  train_sac.py
04_TD3/: README.md  (+3 more)
cpp/: CMakeLists.txt  Makefile  PiFlightController.cpp  PiFlightController.h  README.md  example.c  example.cpp  pi_flight_controller.c  pi_flight_controller.h
(+161 files in other folders)
